# opening_hours_osm

./: Justfile  README.md  pyproject.toml  tmp.py
.github/workflows/: ci.yml  release.yml
src/opening_hours_osm/: __init__.py  context.py  opening_hours.py  parser.py  schedule.py  time_domain.lark  util.py
src/opening_hours_osm/model/: __init__.py  day.py  enums.py  time.py  util.py
tests/: __init__.py  smoke_test.py  test_day.py  test_localization.py  test_model_util.py  test_month_selector.py  test_next_change.py  test_parser.py  test_parser2.py  test_parser_fail.py  test_parser_js.py  test_parser_rust.py  test_regression.py  test_schedule.py  test_time_selector.py  test_timezone.py  test_util.py  test_week_selector.py  test_weekday_selector.py  test_year_selector.py
tests/testfiles/: holidays_de.txt  rust_cases.json
