[project]
name = "opening-hours-osm"
version = "0.1.0"
description = "Python library for parsing the opening hour format used by OpenStreetMap."
readme = "README.md"
authors = [
    { name = "Telinage", email = "contact@telinage.com" }
]
requires-python = ">=3.13"
dependencies = [
    "astral>=3.2",
    "holidays>=0.90",
    "lark-parser>=0.12.0",
    "tzfpy>=1.1.1",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
